--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="C:\Users\Our\Downloads\photo_2023-08-13_11-43-31.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="C:\Portfolio-and-profile\assets\img\photo_2023-08-13_11-43-31.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="portofoliosatria.html" class="logo d-flex align-items-center justify-content-center">
@@ -76,7 +76,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="C:\Users\Our\Downloads\golden-frame-blue-background.jpg" alt="" data-aos="fade-in" class="">
+      <img src="C:\Portfolio-and-profile\assets\img\golden-frame-blue-background.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Satria Anjasmara Hammam</h2>
