--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="C:\Portfolio-and-profile\assets\img\photo_2023-08-13_11-43-31.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="portofoliosatria.html" class="logo d-flex align-items-center justify-content-center">
