--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="C:\Portfolioandprofile\assets\img\satria.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="./C:/Portfolioandprofile/assets/img/satria.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="portofoliosatria.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
+      <!-- <img src="" alt=""> -->
       <h1 class="sitename">Satria Anjasmara Hammam</h1>
     </a>
 
