--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="./C:/Portfolioandprofile/assets/img/satria.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="C:\Portfolioandprofile\assets\img\satria.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="portofoliosatria.html" class="logo d-flex align-items-center justify-content-center">
@@ -76,7 +76,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="C:\Portfolioandprofile\assets\img\frameback.jpg" alt="" data-aos="fade-in" class="">
+      <img src="../C:/Portfolioandprofile/assets/img/frameback.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Satria Anjasmara Hammam</h2>
