--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="C:\Portfolioandprofile\assets\img\satria.jpg" alt="" class="img-fluid rounded-circle">
+      <img src=".//assets/img/satria.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="portofoliosatria.html" class="logo d-flex align-items-center justify-content-center">
