--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="C:\Users\Our\Downloads\photo_2023-08-13_11-43-31.jpg" class="img-fluid" alt="">
+            <img src="./assets/img/satria.jpg" class="img-fluid" alt="Chania">
           </div>
           <div class="col-lg-8 content">
             <h2>Quality Assurance Engineer &amp; Quality Assurance Manual.</h2>
