--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="resume-item">
               <h4>QA Engineer Course</h4>
               <h5>July - Desember 2023</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <p><em>Binar Academy</em></p>
               <p>I learn the basic to expert of Software Testing, Software Engineering, Programming Languages, Data Structures, Algorithms, Database Management Systems, and other in this course.</p>
             </div><!-- Edn Resume Item -->
 
