--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://maps.app.goo.gl/JG1LYj9UMBMEcXH18" frameborder="" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed/v1/place?q=Gg.+Atmo+Rejo+No.19&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" frameborder="" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
