--- a/index.html
+++ b/index.html
@@ -335,8 +335,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed/v1/place?q=Gg.+Atmo+Rejo+No.19&key=AIzaSyCBD26i-yd29RvBK7MkgG4EbXEnqSPqGuw" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+              <div style="max-width:100%;overflow:hidden;color:red;width:100px;height:270px;"><div id="google-maps-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Gg.+Atmo+Rejo+No.19&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="from-embedmap-code" href="https://www.bootstrapskins.com/themes" id="inject-map-data">premium bootstrap themes</a><style>#google-maps-canvas img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div>
           </div>
 
           <div class="col-lg-7">
