--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="C:\Portfolio-and-profile\assets\img\photo_2023-08-13_11-43-31.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="./assets/img/satria.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="portofoliosatria.html" class="logo d-flex align-items-center justify-content-center">
@@ -115,19 +115,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="C:\Users\Our\Pictures\Screenshots\Screenshot (57).png" alt="">
+                  <img src="./assets/img/Screenshot (55).png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="C:\Users\Our\Pictures\Screenshots\Screenshot (17).png" alt="">
+                  <img src="./assets/img/Screenshot (57).png (17).png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="C:\Users\Our\Pictures\Screenshots\Screenshot (39).png" alt="">
+                  <img src="./assets\img\Screenshot (58).png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="C:\Users\Our\Pictures\Screenshots\Screenshot (42).png" alt="">
+                  <img src="./assets\img\Screenshot (62).png" alt="">
                 </div>
 
               </div>
