--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -139,8 +139,7 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Project date</strong>: July - December, 2020</li>
+                <li><strong>Category</strong>: Quality Assurance Engineer</li>
                 <li><strong>Project URL</strong>: <a href="https://github.com/Satriatt123/Portofolio-QA-SatriaAH.git">https://github.com/Satriatt123/Portofolio-QA-SatriaAH.git</a></li>
               </ul>
             </div>
