--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Website Portofolio Satria Anjasmara Hammam</title>
-  <meta content="Website Portofolio Satria Anjasmara Hammam" name="description">
+  <meta content="Web Portofolio Satria Anjasmara Hammam" name="description">
   <meta content="Portofolio" name="keywords">
 
   <!-- Favicons -->
