--- a/index.html
+++ b/index.html
@@ -186,7 +186,14 @@
               <p><em>State High School 2 Ngaglik, Sleman, Yogyakarta</em></p>
               <p>I learned many things at this school, from general knowledge, teamwork, time management, empathy, to becoming a problem solver, and much more.</p>
             </div><!-- Edn Resume Item -->
-
+            
+            <div class="resume-item">
+              <h4>Bachelor of Information Systems</h4>
+              <h5>2025 - Present</h5>
+              <p><em>UPN "Veteran" Yogyakarta</em></p>
+              <p>Focusing on system analysis, software quality, and computational logic. Actively involved in developing IoT solutions and full-stack web applications, which sharpened my ability to identify system anomalies and ensure end-to-end reliability. Experienced in leading technical teams to deliver innovative and functional digital products.</p>
+            </div>
+          
             <div class="resume-item">
               <h4>QA Engineer Course</h4>
               <h5>July - Desember 2023</h5>
