Insert GitHub stats section in index.html
Added GitHub stats display to the webpage.

--- a/index.html
+++ b/index.html
@@ -290,7 +290,11 @@
                 </div>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d247.09106755074086!2d110.3930724234369!3d-7.741244621373779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a59105244499b%3A0x6eb80b6e318d13d4!2sJl.%20Kerto%20Manis%20No.19%2C%20Ngabean%20Kulon%2C%20Sinduharjo%2C%20Kec.%20Ngaglik%2C%20Kabupaten%20Sleman%2C%20Daerah%20Istimewa%20Yogyakarta%2055581!5e0!3m2!1sid!2sid!4v1719238423604!5m2!1sid!2sid" width="270" height="270" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <div class="github-stats text-center py-3">
+  <img src="https://github-readme-stats.vercel.app/api?username=Satriatt123&show_icons=true&theme=radical&hide_border=true&count_private=true" alt="Satria GitHub Stats" class="img-fluid">
+  <br><br>
+  <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Satriatt123&layout=compact&theme=radical&hide_border=true" alt="Top Languages" class="img-fluid">
+</div>
             </div>
           </div>
 
