Refactor contact section layout and remove duplicates
Removed duplicate contact information and reorganized the contact section layout.

--- a/index.html
+++ b/index.html
@@ -251,94 +251,83 @@
 
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="contact section">
 
-      
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-      </div>
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Contact</h2>
+  </div>
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row gy-4">
+    <div class="row gy-4">
 
-          <div class="col-lg-5">
-
-            <div class="info-wrap">
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
-                <i class="bi bi-geo-alt flex-shrink-0"></i>
-                <div>
-                  <h3>Address</h3>
-                  <p>JL. Kaliurang KM.7,8 Ngabean Kulon</p>
-                </div>
-              </div>
-
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-                <i class="bi bi-telephone flex-shrink-0"></i>
-                <div>
-                  <h3>Call Me</h3>
-                  <p>(+62) 882-0066-98091</p>
-                </div>
-              </div>
-
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-                <i class="bi bi-envelope flex-shrink-0"></i>
-                <div>
-                  <h3>Email Me</h3>
-                  <p>satriaanjasmara04@gmail.com</p>
-                </div>
-              </div>
-
-              <div class="github-stats text-center py-3">
-  <img src="https://github-readme-stats.vercel.app/api?username=Satriatt123&show_icons=true&theme=radical&hide_border=true&count_private=true" alt="Satria GitHub Stats" class="img-fluid">
-  <br><br>
-  <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Satriatt123&layout=compact&theme=radical&hide_border=true" alt="Top Languages" class="img-fluid">
-</div>
+      <div class="col-lg-5">
+        <div class="info-wrap" style="height: 100%;">
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+            <i class="bi bi-geo-alt flex-shrink-0"></i>
+            <div>
+              <h3>Address</h3>
+              <p>JL. Kaliurang KM.7,8 Ngabean Kulon</p>
             </div>
           </div>
 
-          <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <label for="name-field" class="pb-2">Your Name</label>
-                  <input type="text" name="name" id="name-field" class="form-control" required="">
-                </div>
-
-                <div class="col-md-6">
-                  <label for="email-field" class="pb-2">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email-field" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <label for="subject-field" class="pb-2">Subject</label>
-                  <input type="text" class="form-control" name="subject" id="subject-field" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <label for="message-field" class="pb-2">Message</label>
-                  <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
-              </div>
-            </form>
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+            <i class="bi bi-telephone flex-shrink-0"></i>
+            <div>
+              <h3>Call Me</h3>
+              <p>(+62) 882-0066-98091</p>
+            </div>
           </div>
 
-        </div>
+          <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+            <i class="bi bi-envelope flex-shrink-0"></i>
+            <div>
+              <h3>Email Me</h3>
+              <p>satriaanjasmara04@gmail.com</p>
+            </div>
+          </div>
 
+          <div class="github-stats-container text-center mt-4 p-3" style="background: rgba(255, 255, 255, 0.05); border-radius: 10px;">
+            <h4 style="font-size: 1.1rem; margin-bottom: 15px; font-weight: 700;">GitHub Activity</h4>
+            <img src="https://github-readme-stats.vercel.app/api?username=Satriatt123&show_icons=true&theme=radical&hide_border=true&count_private=true" alt="Satria GitHub Stats" class="img-fluid mb-3">
+            <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Satriatt123&layout=compact&theme=radical&hide_border=true" alt="Top Languages" class="img-fluid">
+          </div>
+        </div>
       </div>
 
-    </section>
+      <div class="col-lg-7">
+        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+          <div class="row gy-4">
+            <div class="col-md-6">
+              <label for="name-field" class="pb-2">Your Name</label>
+              <input type="text" name="name" id="name-field" class="form-control" required="">
+            </div>
+            <div class="col-md-6">
+              <label for="email-field" class="pb-2">Your Email</label>
+              <input type="email" class="form-control" name="email" id="email-field" required="">
+            </div>
+            <div class="col-md-12">
+              <label for="subject-field" class="pb-2">Subject</label>
+              <input type="text" class="form-control" name="subject" id="subject-field" required="">
+            </div>
+            <div class="col-md-12">
+              <label for="message-field" class="pb-2">Message</label>
+              <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
+            </div>
+            <div class="col-md-12 text-center">
+              <div class="loading">Loading</div>
+              <div class="error-message"></div>
+              <div class="sent-message">Your message has been sent. Thank you!</div>
+              <button type="submit">Send Message</button>
+            </div>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+
+</section>
 
   </main>
 
