--- a/index.html
+++ b/index.html
@@ -288,10 +288,26 @@
           </div>
 
           <div class="github-stats-container text-center mt-4 p-3" style="background: rgba(255, 255, 255, 0.05); border-radius: 10px;">
-            <h4 style="font-size: 1.1rem; margin-bottom: 15px; font-weight: 700;">GitHub Activity</h4>
-            <img src="https://github-readme-stats.vercel.app/api?username=Satriatt123&show_icons=true&theme=radical&hide_border=true&count_private=true" alt="Satria GitHub Stats" class="img-fluid mb-3">
-            <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Satriatt123&layout=compact&theme=radical&hide_border=true" alt="Top Languages" class="img-fluid">
-          </div>
+  <h4 style="font-size: 1.1rem; margin-bottom: 15px; font-weight: 700;">GitHub Activity</h4>
+  
+  <a href="https://github.com/Satriatt123" target="_blank">
+    <img src="https://github-readme-stats.vercel.app/api?username=Satriatt123&show_icons=true&theme=tokyonight&hide_border=false" 
+         alt="Satria GitHub Stats" 
+         style="width: 100%; max-width: 400px;" 
+         onerror="this.onerror=null; this.src='https://via.placeholder.com/400x170?text=GitHub+Stats+Loading...';">
+  </a>
+  
+  <br><br>
+  
+  <a href="https://github.com/Satriatt123" target="_blank">
+    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Satriatt123&layout=compact&theme=tokyonight&hide_border=false" 
+         alt="Top Languages" 
+         style="width: 100%; max-width: 400px;" 
+         onerror="this.onerror=null; this.src='https://via.placeholder.com/400x130?text=Languages+Loading...';">
+  </a>
+  
+  <p class="mt-3" style="font-size: 0.8rem; color: #666;">*Data updated automatically from GitHub profile</p>
+</div>
         </div>
       </div>
 
